@@ -1,4 +1,7 @@
 * CallCenter Config, Agent Console, Agents: Use methods load_language_module and _tr from Elastix framework. Define them if they do not exist.
+* Campaigns: improve speed and memory usage of CSV download of completed 
+  campaign data by replacing single big SQL query by multiple smaller ones.
+  Fixes Elastix bug #600. 
 * Agents: make module aware of url parameter in paloSantoGrid::fetchForm().
 * Agents: remove <form> tags from the filter HTML template. They are not required, since the template already includes a proper <form> tag enclosing the grid.
 * Agent Console (programar_llamadas): restrict call reprogramming interface to
